--- a/src/styles/landing.sass
+++ b/src/styles/landing.sass
@@ -1,5 +1,11 @@
 .hero-wrapper
-  padding-top: 25vh
+  display: flex
+  justify-content: center
+  align-items: center
+  height: auto
+  width: 100%
+  padding-top: 250px
+
 
 .hero
   display: flex
@@ -9,20 +15,20 @@
   height: auto
   position: relative
   flex-direction: row
-  margin-left: auto
-  margin-right: auto
+  margin: auto
   max-width: 1350px
 
   .hero-content
     text-align: center
     max-width: 600px
-    margin: 0 auto
+    margin: 0 150px
     font-family: var(--font-montserrat), Arial, sans-serif
     color: #ffffff
     position: relative
     transform: translateY(-50%) translateX(-100%)
     opacity: 0
-    transition: transform 1s ease-out, opacity 1s ease-out
+    transition: transform 1.5s ease-out, opacity 1.5s ease-out
+    border-radius: 50%
 
   .hero-image
     max-width: 300px
@@ -31,7 +37,10 @@
     position: relative
     transform: translateY(-50%) translateX(100%)
     opacity: 0
-    transition: transform 1s ease-out, opacity 1s ease-out
+    transition: transform 1.5s ease-out, opacity 1.5s ease-out
+
+    .image
+      border-radius: 50%
 
   &.loaded .hero-content
     transform: translateY(-50%) translateX(0)
@@ -86,6 +95,8 @@
 
     .hero-content
       margin-top: 20px
+      margin-left: auto
+      margin-right: auto
 
     .hero-image
       top: 0
