--- a/src/styles/sectionheader.sass
+++ b/src/styles/sectionheader.sass
@@ -5,6 +5,15 @@
   text-align: center
   gap: 20px
   margin-bottom: 50px
+  overflow: hidden
+  opacity: 0
+  transform: translateX(100px)
+  clip-path: inset(0 0 0 0)
+  transition: opacity 1.2s ease-out, transform 1.2s ease-out
+
+  &.loaded
+    opacity: 1
+    transform: translateX(0)
 
   h1
     font-size: 2rem
